2010-10-28 John Wu <John dot Wu at ACM dot org>
	* src: remove the prefix ibis from most of the print statements
	* tests/Makefile.am: in two places smallmem2.rc was incorrectly
	writtent as smallmem3.rc
	* src: update many files to address the warning message produced
	by PGI compilers

2010-10-25 John Wu <John dot Wu at ACM dot org>
	* src/part.h, src/part.cpp: add keyword virtual to the definition
	of ibis::part::buildIndexes to allow other packages to override it
	more easily

2010-10-21 John Wu <John dot Wu at ACM dot org>
	* src/util.cpp: in function util::userName add macro HAVE_GETPWUID
	to control the access to getpwuid (on certain parallel computers,
	getpwuid is supported differently on the compute nodes and the
	login nodes, using it can cause the program to crash), comment out
	the use of getlogin because it requires a login shell
	* configure.ac: add a statement with AC_RUN_IFELSE to test for the
	presence and usability of getpwuid

2010-10-20 John Wu <John dot Wu at ACM dot org>
	* src/tafel.cpp: update the conditional macro surrounding strtoll
	* configure.ac: add test for strtoll, remove tests for unnecessary
	header
	* src/const.h: remove reference to memory.h

2010-09-24 John Wu <John dot Wu at ACM dot org>
	* src/mensa.cpp:2088 add missing & to avoid the cursor object from
	pointing to temporary objects for names
	* src/iroster.cpp: update the constructor to avoid extra copying
	* src/ikeywords.cpp: update readTermDocFile to allow for a keyword
	to appear in multiple lines of the term document list
	* tests/Makefile.am: add test two cases to really-small to
	exercise the keyword index feature
	* src/column.cpp: update the log messages from readLock, writeLock
	and softWriteLock to output the address of the read-write lock
	* src/part.h, src/part.cpp: move the definition of readLock,
	writeLock, advisoryLock from part.h to part.cpp, change the log
	statements to match those from ibis::fileManager

2010-09-23 John Wu <John dot Wu at ACM dot org>